# raytracer

./: .clang-format  .gitmodules  CMakeLists.txt
.github/workflows/: build_and_test.yml
src/: main.c  version.h
src/engine/: angle.h  aperture.c  aperture.h  hit_data.h  image.c  image.h  lens.c  lens.h  lens_ideal.c  lens_ideal.h  lens_spherical.c  lens_spherical.h  object.c  object.h  plane.c  plane.h  ray.c  ray.h  sensor.c  sensor.h  sphere.c  sphere.h  vector.c  vector.h
src/tests/: main.c
src/utils/: compare.h  file.c  file.h  optional.h
tests/: main.c  minunit.h
tests/engine/: aperture.c  aperture.h  lens.c  lens.h  lens_ideal.c  lens_ideal.h  lens_spherical.c  lens_spherical.h  main.c  main.h  plane.c  plane.h  ray.c  ray.h  sensor.c  sensor.h  sphere.c  sphere.h  vector.c  vector.h
